fix card section title overflow problem

--- a/css/cards.css
+++ b/css/cards.css
@@ -76,7 +76,7 @@
   text-overflow: ellipsis; 
 }
 
-.card-title {
+.card-song-title {
   overflow: hidden;
   white-space: nowrap; 
   text-overflow: ellipsis; 
